# Logger

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
docs/: log.md
files/cpp/: log.cpp
files/include/: log.h  operator.tpp
